# RVData

./: .gitignore  .readthedocs.yml  Dockerfile  MANIFEST.in  README.md  batch_expres.py  log.txt  makefile  output.txt  pyproject.toml  requirements.txt  test.fits  test.ipynb  tox.ini
.github/workflows/: ci-fast.yml  ci-full.yml  ci.yml  release-pypi.yml
core/models/: base.py  config_columns.py  definitions.py  level1.py  level2.py  receipt_columns.py
core/models/config/: BASE-RECEIPT-columns.csv  L2-RECEIPT-columns.csv  L2-TELEMETRY-columns.csv  L2-extensions.csv  L2_extensions.csv  L2_header.csv  L3-extensions.csv  L3a-extensions.csv  L3b-extensions.csv
core/tools/: headers.py
docs/source/: EPRV_DS_Units.csv  FITS-extensions.rst  _notebooks.rst  api.rst  conf.py  faq.rst  governance.rst  index.rst  instrumentoverviews.rst  interact.rst  new.rst  notable.rst  overview.rst  primaryheader.rst  tutorials.rst  units.rst
docs/source/data_model/: base_model.rst  espresso.rst  expres.rst  harps.rst  harpsn.rst  kpf.rst  level_2.rst  level_3.rst  level_4.rst  neid.rst
docs/source/tutorials/: DataStandard_Overview.ipynb  ESPRESSO_Tutorial.ipynb  KPF_Tutorial.ipynb  MAROONX_Tutorial.ipynb  NEID_Tutorial.ipynb  level3datastandard_from_NEIDlevel2_example.ipynb
docs/tutorials/: DataStandard_Overview.ipynb  KPF_Tutorial.ipynb  Stitch_NEID_Spectrum_Example.ipynb
instruments/espresso/: level2.py  utils.py
instruments/espresso/config/: config.py  header_map.csv
instruments/espresso/utils/: __init__.py  convert_BLAZE.py  convert_DRIFT.py  convert_RAW.py  convert_S2D_BLAZE.py  create_PRIMARY.py  get_files_names.py  validate_fits_file.py
instruments/expres/: level2.py
instruments/expres/config/: expres_epochs.csv
instruments/harps/: level2.py  pasutils.py
instruments/harps/config/: config.py  header_map.csv
instruments/harps/utils/: __init__.py  convert_BLAZE.py  convert_DRIFT.py  convert_S2D_BLAZE.py  create_PRIMARY.py  get_files_names.py  validate_fits_file.py
instruments/harpsn/: level2.py  pasutils.py
instruments/harpsn/config/: config.py  header_map.csv
instruments/harpsn/utils/: __init__.py  convert_BLAZE.py  convert_DRIFT.py  convert_S2D_BLAZE.py  create_PRIMARY.py  get_files_names.py  validate_fits_file.py
instruments/kpf/: level2.py
instruments/kpf/config/: header_map.csv
instruments/neid/: level2.py
instruments/neid/config/: header_map.csv
instruments/nirps/: level2.py
instruments/nirps/config/: config.py
instruments/nirps/utils/: __init__.py  convert_BLAZE.py  convert_DRIFT.py  convert_RAW.py  convert_S2D_BLAZE.py  create_PRIMARY.py  get_files_names.py  validate_fits_file.py
rvdata/core/: __init__.py
rvdata/core/models/: base.py  definitions.py  level2.py  level3.py  level4.py  receipt_columns.py
rvdata/core/models/config/: BASE-DRP_CONFIG-columns.csv  BASE-ORDER_TABLE-columns.csv  BASE-RECEIPT-columns.csv  L2-BARYCORR_KMS-keywords.csv  L2-BARYCORR_Z-keywords.csv  L2-BJD_TDB-keywords.csv  L2-DRP_CONFIG-columns.csv  L2-PRIMARY-keywords.csv  L2-Start.csv  L2-TRACE_BLAZE-keywords.csv  L2-TRACE_FLUX-keywords.csv  L2-TRACE_VAR-keywords.csv  L2-TRACE_WAVE-keywords.csv  L2-extensions.csv  L3-PRIMARY-keywords.csv  L3-extensions.csv  L3a-extensions.csv  L4-CCF1-keywords.csv  L4-PRIMARY-keywords.csv  L4-RV1-keywords.csv  L4-RV_TABLE-columns.csv  L4-extensions.csv
rvdata/core/tools/: git.py  headers.py  stitch_spectrum.py  utils.py
rvdata/instruments/espresso/: level2.py
rvdata/instruments/espresso/config/: config.py  header_map.csv  table_order.csv
rvdata/instruments/espresso/utils/: __init__.py  convert_BLAZE.py  convert_CCF.py  convert_DRIFT.py  convert_RAW.py  convert_S1D.py  convert_S2D_BLAZE.py  convert_SKYSUB.py  convert_TELLURIC.py  create_PRIMARY.py  get_files_names.py  validate_fits_file.py
rvdata/instruments/expres/: level2.py
rvdata/instruments/expres/config/: expres_epochs.csv  expres_header_map.csv  header_map.csv
rvdata/instruments/harps/: level2.py
rvdata/instruments/harps/config/: config.py  ext_descript.csv  header_map.csv  table_order.csv
rvdata/instruments/harps/utils/: __init__.py  convert_BLAZE.py  convert_DRIFT.py  convert_S2D_BLAZE.py  create_PRIMARY.py  get_files_names.py  validate_fits_file.py
rvdata/instruments/harpsn/: level2.py
rvdata/instruments/harpsn/config/: config.py  header_map.csv
rvdata/instruments/harpsn/utils/: __init__.py  convert_BLAZE.py  convert_DRIFT.py  convert_S2D_BLAZE.py  create_PRIMARY.py  get_files_names.py  validate_fits_file.py
rvdata/instruments/kpf/: level2.py  level3.py  level4.py
rvdata/instruments/kpf/config/: L2-extensions.csv  header_map.csv  kpf_level3.config  smooth_lamp_pattern.csv
rvdata/instruments/maroonx/: level2.py  level3.py  level4.py
rvdata/instruments/maroonx/config/: MX_ext_Descript.csv  MX_inst_era.csv  header_map.csv  maroonxred_level3.config
rvdata/instruments/maroonx/utils/: MXutils.py
rvdata/instruments/maroonxblue/: __init__.py
rvdata/instruments/maroonxblue/config/: maroonxblue_level3.config
rvdata/instruments/maroonxred/: __init__.py
rvdata/instruments/neid/: level2.py  level3.py  level4.py
rvdata/instruments/neid/config/: header_map.csv  neid_fsr.csv  neid_inst_eras.csv  neid_l2_ext_table.csv  neid_level3.config
rvdata/instruments/neid/utils/: make_neid_primary_header.py
rvdata/instruments/nirps/: level2.py
rvdata/instruments/nirps/config/: config.py  header_map.csv  table_order.csv
rvdata/instruments/nirps/utils/: __init__.py  convert_BLAZE.py  convert_DRIFT.py  convert_RAW.py  convert_S2D_BLAZE.py  convert_SKYSUB.py  convert_TELLURIC.py  create_PRIMARY.py  get_files_names.py  validate_fits_file.py
rvdata/tests/: test_base_serialization.py  test_bit_depth.py  test_echelle_order_to_order_index.py  test_filename_convention.py  test_headers.py  test_receipt.py  test_table_metadata.py
rvdata/tests/regression/: compliance.py  test_base.py  test_espresso.py  test_kpf.py  test_maroonx.py  test_neid.py
rvdata/tests/regression/fixtures/: dace-unige-ch-chain.pem
tests/regression/: compliance.py  test_kpf.py
